--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             SEH 4000 Research Wing
           </div>
           <div class="col-sm">
-            <a href="github.com/gwusec">
+            <a href="https://github.com/gwusec">
               <img src="imgs/icons/github.svg"><br>
               github.com/gwusec
             </a>
