Updated Collins's website URL and image

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
               
               <div class="col-sm">
                 <center>
-                  <img src="imgs/people/collinsmunyendo.png" width="200px" alt="Collins Munyendo" class="img-thumbnail"><br>
-                  <a href="http://collinsmunyendo.me/">Collins Munyendo</a><br>
+                  <img src="imgs/people/collinsmunyendo.jpg" width="200px" alt="Collins Munyendo" class="img-thumbnail"><br>
+                  <a href="https://collinsmunyendo.github.io/">Collins Munyendo</a><br>
                   Ph.D. Student<br>
                 </center>
               </div>
