--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
                 <div class="col-sm">
                   <center>
-                    <img src="imgs/people/petermayer.jpg" width="200px" alt="Peter Mayer" class="img-thumbnail"><br>
+                    <img src="imgs/people/petermayer.jpg" width="200px" alt="Peter Mayer" class="img-thumbnail" style="object-fit: cover;width:200px; height:200px;"><br>
                     Peter Mayer<br>
                     External Collaborator<br>
                     <em>Post-Doc in abstentia</em>
@@ -193,7 +193,7 @@
                 
                 <div class="col-sm">
                   <center>
-                    <img src="imgs/people/baby_yoda.jpg" width="200px" alt="Tim Forman" class="img-thumbnail"><br>
+                    <img src="imgs/people/timforman.jpg" width="200px" alt="Tim Forman" class="img-thumbnail" style="object-fit: cover;width:200px; height:200px;"><br>
                     Tim Forman<br>
                     Undergraduate (USNA)<br>
                   </center>
@@ -201,8 +201,7 @@
                 
                 <div class="col-sm">
                   <center>
-                    <img src="imgs/people/owen.jpg" width="200px" alt="Xiaoyuan (Owen) Wu" class="img-thumbnail" style="object-fit: cover;width:200px;
-  height:200px;"><br>
+                    <img src="imgs/people/owen.jpg" width="200px" alt="Xiaoyuan (Owen) Wu" class="img-thumbnail" style="object-fit: cover;width:200px; height:200px;"><br>
                     Xiaoyuan (Owen) Wu<br>
                     Undergraduate<br>
                   </center>
