fixing links and adding favicon

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!doctype html>
+<!doctype html
+PUBLIC "-//W3C//DTD HTML 4.01//EN"
+      "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,6 +12,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
 
+    <link rel="icon" 
+      type="image/png" 
+      href="imgs/icon.png">
     <title>GWUSEC</title>
   </head>
 
@@ -84,8 +89,11 @@
           <div class="container news">
             <h4> News</h4>
             <ul>
-              <li> <span class="badge badge-secondary">May 2020</span>  Three new students are joining the research group at GW: David Balash, Nelson Jaimes, and Collins Munyendo. Welcome!
-                <ul>
+              e<li> <span class="badge badge-secondary">May 2020</span> Philipp Markert <is presenting our research We've got a twitter account <a href="twitter.com/gwusec">@gwusec</a>. Follow us.  </li>
+              <li> <span class="badge badge-secondary">May 2020</span> We've got a twitter account <a href="twitter.com/gwusec">@gwusec</a>. Follow us.  </li>
+              <li> <span class="badge badge-secondary">May 2020</span>  Three new students are joining the research group at GW: David Balash, Nelson Jaimes, and Collins Munyendo. Welcome! </li>
+              <li> <span class="badge badge-secondary">May 2020</span>  The lab website goes live!  </li>
+              <ul>
           </div>
 
         </div>
@@ -292,11 +300,11 @@
           <a name="pubs"></a>
           <h2> Publications </h2>
           <ul class="list-group">
-            <li class="list-group-item disabled" aria-disabled="true">
+            <li class="list-group-item" aria-disabled="true">
               Philipp Markert, Daniel V. Bailey, Maximillian Golla, Markus Duermuth, and Adam J. Aviv. <a href="https://doi.ieeecomputersociety.org/10.1109/SP40000.2020.00100">This PIN Can Be Easily Guessed: Analyzing the Security of Smartphone Unlock PINs</a>. 2020 IEEE Symposium on Security and Privacy (SP). Pgs. 1525-1542. IEEE Computer Society. 2020
             </li>
 
-            <li class="list-group-item disabled" aria-disabled="true">
+            <li class="list-group-item" aria-disabled="true">
 Timothy J. Forman, Daniel S. Roche, and Adam J. Aviv. <a href="https://doi.org/10.1145/3334480.3382922">Twice as Nice? A Preliminary Evaluation of Double Android Unlock Patterns</a>. Extended Abstracts of the 2020 CHI Conference on Human Factors in Computing Systems. (CHI EA ’20). Pgs. 1–7. Association for Computing Machinery. 2020 
             </li>
           </ul>
