--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ PUBLIC "-//W3C//DTD HTML 4.01//EN"
           <div class="container news">
             <h4> News</h4>
             <ul>
-              e<li> <span class="badge badge-secondary">May 2020</span> Philipp Markert <is presenting our research We've got a twitter account <a href="twitter.com/gwusec">@gwusec</a>. Follow us.  </li>
-              <li> <span class="badge badge-secondary">May 2020</span> We've got a twitter account <a href="twitter.com/gwusec">@gwusec</a>. Follow us.  </li>
+              e<li> <span class="badge badge-secondary">May 2020</span> Philipp Markert is presenting our research</li>
+              <li> <span class="badge badge-secondary">May 2020</span> We've got a twitter account <a href="twitter.com/gwusec">@gwusec</a>. Follow us for updates!  </li>
               <li> <span class="badge badge-secondary">May 2020</span>  Three new students are joining the research group at GW: David Balash, Nelson Jaimes, and Collins Munyendo. Welcome! </li>
               <li> <span class="badge badge-secondary">May 2020</span>  The lab website goes live!  </li>
               <ul>
