--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ PUBLIC "-//W3C//DTD HTML 4.01//EN"
             <ul>
               e<li> <span class="badge badge-secondary">May 2020</span> Philipp Markert is presenting our research</li>
               <li> <span class="badge badge-secondary">May 2020</span> We've got a twitter account <a href="twitter.com/gwusec">@gwusec</a>. Follow us for updates!  </li>
-              <li> <span class="badge badge-secondary">May 2020</span>  Three new students are joining the research group at GW: David Balash, Nelson Jaimes, and Collins Munyendo. Welcome! </li>
+              <li> <span class="badge badge-secondary">May 2020</span>   David Balash, Nelson Jaimes, and Collins Munyendo. Welcome aboard! </li>
               <li> <span class="badge badge-secondary">May 2020</span>  The lab website goes live!  </li>
               <ul>
           </div>
