--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ PUBLIC "-//W3C//DTD HTML 4.01//EN"
           <div class="container news">
             <h4> News</h4>
             <ul>
-              e<li> <span class="badge badge-secondary">May 2020</span> Philipp Markert is presenting our research</li>
+              <li> <span class="badge badge-secondary">May 2020</span> Philipp Markert is presenting our research</li>
               <li> <span class="badge badge-secondary">May 2020</span> We've got a twitter account <a href="twitter.com/gwusec">@gwusec</a>. Follow us for updates!  </li>
               <li> <span class="badge badge-secondary">May 2020</span>   David Balash, Nelson Jaimes, and Collins Munyendo. Welcome aboard! </li>
               <li> <span class="badge badge-secondary">May 2020</span>  The lab website goes live!  </li>
