Fixed 43 HTML errors and warnings to make the website W3C compliant.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-navbar fixed-top">
-        <a class="navbar-brand" href="#home"> <img src="imgs/icon.png" width="35" class="align-right"> GWU/USEC Lab</a>
+        <a class="navbar-brand" href="#home"> <img src="imgs/icon.png" alt="GWU/USEC Lab logo" width="35" class="align-right"> GWU/USEC Lab</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,24 +35,24 @@
             </ul>
         </div>
     </nav>
-    <main role="main" class="flex-shrink-0">
-        <a name="home"></a>
+    <main class="flex-shrink-0">
+        <a id="home"></a>
         <div class="container starter">
-            <img src="imgs/banner.png" height="250px" class="img-fluid">
+            <img src="imgs/banner.png" alt="GWU/USEC Lab banner" height="250" class="img-fluid">
             <div class="row mt-4">
                 <div class="col-sm">
                     <a href="https://twitter.com/gwusec">
-                        <img src="imgs/icons/twitter.svg"><br>
+                        <img src="imgs/icons/twitter.svg" alt="Twitter icon"><br>
                         @gwusec
                     </a>
                 </div>
                 <div class="col-sm">
-                    <img src="imgs/icons/home.svg"><br>
+                    <img src="imgs/icons/home.svg" alt="House icon"><br>
                     SEH 4000 Research Wing
                 </div>
                 <div class="col-sm">
                     <a href="https://github.com/gwusec">
-                        <img src="imgs/icons/github.svg"><br>
+                        <img src="imgs/icons/github.svg" alt="GitHub icon"><br>
                         github.com/gwusec
                     </a>
                 </div>
@@ -75,166 +75,141 @@
                         <li><span class="badge badge-secondary">May 2020</span> We've got a Twitter account <a href="twitter.com/gwusec">@gwusec</a>. Follow us for updates!</li>
                         <li><span class="badge badge-secondary">May 2020</span> David Balash, Nelson Jaimes, and Collins Munyendo. Welcome aboard!</li>
                         <li><span class="badge badge-secondary">May 2020</span> The lab website goes live!</li>
-                        <ul>
+                    </ul>
                 </div>
             </div>
             <div class="container people content">
-                <a name="people"></a>
+                <a id="people"></a>
                 <h2> People </h2>
-                <a name="home"></a>
                 <div class="container">
                     <div class="row mt-2 mb-4">
-                        <div class="col-sm">
-                            <center>
-                                <img src="imgs/people/001_adam.jpg" width="200px" alt="Adam J. Aviv" class="img-thumbnail">
-                                <br>
-                                <a href="https://adamaviv.com">Adam J. Aviv</a>
-                                <br>
-                                Associate Professor
-                                <br>
-                                <em>Lab Directory</em>
-                            </center>
+                        <div class="col-sm text-center">
+                            <img src="imgs/people/001_adam.jpg" width="200" alt="Adam J. Aviv" class="img-thumbnail">
+                            <br>
+                            <a href="https://adamaviv.com">Adam J. Aviv</a>
+                            <br>
+                            Associate Professor
+                            <br>
+                            <em>Lab Directory</em>
                         </div>
-                        <div class="col-sm">
-                            <center>
-                                <img src="imgs/people/002_yasemin.jpg" width="200px" alt="Yasmine Acar" class="img-thumbnail">
-                                <br>
-                                <a href="https://yaseminacar.de/">Yasemin Acar</a>
-                                <br>
-                                External Collaborator
-                                <br>
-                            </center>
+                        <div class="col-sm text-center">
+                            <img src="imgs/people/002_yasemin.jpg" width="200" alt="Yasmine Acar" class="img-thumbnail">
+                            <br>
+                            <a href="https://yaseminacar.de/">Yasemin Acar</a>
+                            <br>
+                            External Collaborator
+                            <br>
                         </div>
-                        <div class="col-sm">
-                            <center>
-                                <img src="imgs/people/003_david.jpg" width="200px" alt="David Balesh" class="img-thumbnail">
-                                <br>
-                                <a href="https://github.com/DavidBalash">David Balesh</a>
-                                <br>
-                                PhD Student
-                                <br>
-                            </center>
+                        <div class="col-sm text-center">
+                            <img src="imgs/people/003_david.jpg" width="200" alt="David Balesh" class="img-thumbnail">
+                            <br>
+                            <a href="https://github.com/DavidBalash">David Balesh</a>
+                            <br>
+                            PhD Student
+                            <br>
                         </div>
-                        <div class="col-sm">
-                            <center>
-                                <img src="imgs/people/004_nelson.jpg" width="200px" alt="Nelson Jaimes" class="img-thumbnail">
-                                <br>
-                                <a href="http://www.nelsonjdesign.com/">Nelson Jaimes</a>
-                                <br>
-                                PhD Student
-                                <br>
-                            </center>
+                        <div class="col-sm text-center">
+                            <img src="imgs/people/004_nelson.jpg" width="200" alt="Nelson Jaimes" class="img-thumbnail">
+                            <br>
+                            <a href="http://www.nelsonjdesign.com/">Nelson Jaimes</a>
+                            <br>
+                            PhD Student
+                            <br>
                         </div>
                     </div>
                     <div class="row mt-2 mb-4">
-                        <div class="col-sm">
-                            <center>
-                                <img src="imgs/people/005_collins.jpg" width="200px" alt="Collins Munyendo" class="img-thumbnail">
-                                <br>
-                                <a href="https://collinsmunyendo.github.io/">Collins Munyendo</a>
-                                <br>
-                                PhD Student
-                                <br>
-                            </center>
+                        <div class="col-sm text-center">
+                            <img src="imgs/people/005_collins.jpg" width="200" alt="Collins Munyendo" class="img-thumbnail">
+                            <br>
+                            <a href="https://collinsmunyendo.github.io/">Collins Munyendo</a>
+                            <br>
+                            PhD Student
+                            <br>
                         </div>
-                        <div class="col-sm">
-                            <center>
-                                <img src="imgs/people/000_placeholder.jpg" width="200px" alt="James Levy" class="img-thumbnail">
-                                <br>
-                                James Levy
-                                <br>
-                                PhD Student
-                                <br>
-                            </center>
+                        <div class="col-sm text-center">
+                            <img src="imgs/people/000_placeholder.jpg" width="200" alt="James Levy" class="img-thumbnail">
+                            <br>
+                            James Levy
+                            <br>
+                            PhD Student
+                            <br>
                         </div>
-                        <div class="col-sm">
-                            <center>
-                                <img src="imgs/people/006_irwin.jpg" width="200px" alt="Irwin Reyes" class="img-thumbnail">
-                                <br>
-                                <a href="https://irwinreyes.com/">Irwin Reyes</a>
-                                <br>
-                                External Collaborator
-                                <br>
-                                <em>"Fixer"</em>
-                            </center>
+                        <div class="col-sm text-center">
+                            <img src="imgs/people/006_irwin.jpg" width="200" alt="Irwin Reyes" class="img-thumbnail">
+                            <br>
+                            <a href="https://irwinreyes.com/">Irwin Reyes</a>
+                            <br>
+                            External Collaborator
+                            <br>
+                            <em>"Fixer"</em>
                         </div>
-                        <div class="col-sm">
-                            <center>
-                                <img src="imgs/people/007_max.jpg" width="200px" alt="Maximllian Golla" class="img-thumbnail">
-                                <br>
-                                Maximilian Golla
-                                <br>
-                                External Collaborator
-                                <br>
-                                <em>Survey Guru</em>
-                            </center>
+                        <div class="col-sm text-center">
+                            <img src="imgs/people/007_max.jpg" width="200" alt="Maximllian Golla" class="img-thumbnail">
+                            <br>
+                            Maximilian Golla
+                            <br>
+                            External Collaborator
+                            <br>
+                            <em>Survey Guru</em>
                         </div>
                     </div>
                     <div class="row mt-2 mb-4">
-                        <div class="col-sm">
-                            <center>
-                                <img src="imgs/people/008_philipp.jpg" width="200px" alt="Philipp Markert" class="img-thumbnail">
-                                <br>
-                                Philipp Markert
-                                <br>
-                                External Collaborator
-                                <br>
-                            </center>
+                        <div class="col-sm text-center">
+                            <img src="imgs/people/008_philipp.jpg" width="200" alt="Philipp Markert" class="img-thumbnail">
+                            <br>
+                            Philipp Markert
+                            <br>
+                            External Collaborator
+                            <br>
                         </div>
-                        <div class="col-sm">
-                            <center>
-                                <img src="imgs/people/009_peter.jpg" width="200px" alt="Peter Mayer" class="img-thumbnail">
-                                <br>
-                                Peter Mayer
-                                <br>
-                                External Collaborator
-                                <br>
-                                <em>Postdoc in abstentia</em>
-                            </center>
+                        <div class="col-sm text-center">
+                            <img src="imgs/people/009_peter.jpg" width="200" alt="Peter Mayer" class="img-thumbnail">
+                            <br>
+                            Peter Mayer
+                            <br>
+                            External Collaborator
+                            <br>
+                            <em>Postdoc in abstentia</em>
                         </div>
-                        <div class="col-sm">
-                            <center>
-                                <img src="imgs/people/010_tim.jpg" width="200px" alt="Tim Forman" class="img-thumbnail">
-                                <br>
-                                Tim Forman
-                                <br>
-                                Undergraduate (USNA)
-                                <br>
-                            </center>
+                        <div class="col-sm text-center">
+                            <img src="imgs/people/010_tim.jpg" width="200" alt="Tim Forman" class="img-thumbnail">
+                            <br>
+                            Tim Forman
+                            <br>
+                            Undergraduate (USNA)
+                            <br>
                         </div>
-                        <div class="col-sm">
-                            <center>
-                                <img src="imgs/people/011_owen.jpg" width="200px" alt="Xiaoyuan (Owen) Wu" class="img-thumbnail">
-                                <br>
-                                Xiaoyuan (Owen) Wu
-                                <br>
-                                Undergraduate
-                                <br>
-                            </center>
+                        <div class="col-sm text-center">
+                            <img src="imgs/people/011_owen.jpg" width="200" alt="Xiaoyuan (Owen) Wu" class="img-thumbnail">
+                            <br>
+                            Xiaoyuan (Owen) Wu
+                            <br>
+                            Undergraduate
+                            <br>
                         </div>
                     </div>
                     <em>If you are a current lab member or collaborator and would like to be added to the list of members, submit a pull request to the webpage repository.</em>
                     <div class="container external-lab">
                         <h3>External Lab Collaborations</h3>
                         <ul>
-                            <li><a href="https://push.umbc.edu/">PUSH Group: Privacy & Usability Security Human-center Computing</a> at University of Maryland, Baltimore County (UMD)</li>
-                            <ul>
+                            <li><a href="https://push.umbc.edu">PUSH Group: Privacy & Usable Security Human-centered Computing</a> at University of Maryland, Baltimore County (UMD)</li>
+                            <li><ul>
                                 <li>Ravi Kuber</li>
                                 <li>Hirak Rey</li>
                                 <li>Flynn Wolf</li>
-                            </ul>
+                            </ul></li>
                             <li>Security, Privacy, People lab (SP2) at University of Maryland, College Park (UMD)</li>
-                            <ul>
+                            <li><ul>
                                 <li>Michelle Mazurek</li>
                                 <li>Noel Wartford</li>
-                            </ul>
+                            </ul></li>
                         </ul>
                     </div>
                 </div>
                 <!-- <h3> Alumn/Past Members </h3>-->
             </div>
             <div class="container activities content">
-                <a name="activities"></a>
+                <a id="activities"></a>
                 <h2>Activities</h2>
                 <p>
                     The lab has a number of public and private activities.
@@ -245,7 +220,7 @@
                     <li><strong>Security and Privacy Reading Group</strong>
                         <div class="badge badge-success">public</div>
                         <p>
-                            The <a href="https://gwu-cs-sp-reading-group.github.io/">Security and Privacy Reading Group</a> is a weekly <strong>public</strong> event where we discuss a recent research article related to security and privacy.
+                            The <a href="https://gwu-cs-sp-reading-group.github.io">Security and Privacy Reading Group</a> is a weekly <strong>public</strong> event where we discuss a recent research article related to security and privacy.
                             A discussion lead will prepare a short presentation that will kick off the discussion.
                             The reading group is also "brown bag lunch" and has a social component.
                         </p>
@@ -275,8 +250,8 @@
                     </li>
                 </ul>
             </div>
-            <div class="container activities content">
-                <a name="activities"></a>
+            <div class="container join content">
+                <a id="join"></a>
                 <h2>Join the lab!</h2>
                 <p>
                     So, you're interested in computer security and privacy research and you're interested in joining the lab? Great!
@@ -300,10 +275,11 @@
                             You may also email Adam Aviv if you are interested in research project, but you will likely be directed to attend a public event.
                             If you cannot attend a public event, we can arrange other times to meet.
                         </p>
+                    </li>
                 </ul>
             </div>
             <div class="container publications content">
-                <a name="pubs"></a>
+                <a id="pubs"></a>
                 <h2>Publications </h2>
                 <ul class="list-group">
                     <li class="list-group-item" aria-disabled="true">
