--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         Philipp Markert, Daniel V. Bailey, Maximillian Golla, Markus D&uuml;rmuth, and Adam J. Aviv. <a href="https://doi.ieeecomputersociety.org/10.1109/SP40000.2020.00100">This PIN Can Be Easily Guessed: Analyzing the Security of Smartphone Unlock PINs</a>. 2020 IEEE Symposium on Security and Privacy (SP). Pgs. 1525-1542. IEEE Computer Society. 2020
                     </li>
                     <li class="list-group-item" aria-disabled="true">
-                        Timothy J. Forman, Daniel S. Roche, and Adam J. Aviv. <a href="https://doi.org/10.1145/3334480.3382922">Twice as Nice? A Preliminary Evaluation of Double Android Unlock Patterns</a>. Extended Abstracts of the 2020 CHI Conference on Human Factors in Computing Systems. (CHI EA ’20). Pgs. 1–7. Association for Computing Machinery. 2020
+                        Timothy J. Forman, Daniel S. Roche, and Adam J. Aviv. <a href="https://dl.acm.org/doi/abs/10.1145/3334480.3382922">Twice as Nice? A Preliminary Evaluation of Double Android Unlock Patterns</a>. Extended Abstracts of the 2020 CHI Conference on Human Factors in Computing Systems. (CHI EA ’20). Pgs. 1–7. Association for Computing Machinery. 2020
                     </li>
                 </ul>
             </div>
