--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <h4>News</h4>
                     <ul>
                         <li><span class="badge badge-secondary">May 2020</span> Philipp Markert is presenting our research at IEEE S&P (Oakland) on May 18th.</li>
-                        <li><span class="badge badge-secondary">May 2020</span> We've got a Twitter account <a href="twitter.com/gwusec">@gwusec</a>. Follow us for updates!</li>
+                        <li><span class="badge badge-secondary">May 2020</span> We've got a Twitter account <a href="https://twitter.com/gwusec">@gwusec</a>. Follow us for updates!</li>
                         <li><span class="badge badge-secondary">May 2020</span> David Balash, Nelson Jaimes, and Collins Munyendo. Welcome aboard!</li>
                         <li><span class="badge badge-secondary">May 2020</span> The lab website goes live!</li>
                     </ul>
