--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                             <br>
                         </div>
                         <div class="col-sm text-center">
-                            <img src="imgs/people/003_david.jpg" width="200" alt="David Balesh" class="img-thumbnail">
+                            <img src="imgs/people/003_david.jpg" width="200" alt="David Balash" class="img-thumbnail">
                             <br>
-                            <a href="https://github.com/DavidBalash">David Balesh</a>
+                            <a href="https://github.com/DavidBalash">David Balash</a>
                             <br>
                             PhD Student
                             <br>
