--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <br>
                             Associate Professor
                             <br>
-                            <em>Lab Directory</em>
+                            <em>Lab Director</em>
                         </div>
                         <div class="col-sm text-center">
                             <img src="imgs/people/002_yasemin.jpg" width="200" alt="Yasmine Acar" class="img-thumbnail">
