--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             The reading group is also "brown bag lunch" and has a social component.
                         </p>
                         <p>
-                            Thursdays 1130-1230. Currently meeting virtually.
+                            <strike>Thursdays 1130-1230. Currently meeting virtually.</strike> (Off for the summer, returning August)
                         </p>
                     </li>
                     <li><strong>Lab Meetings</strong>
@@ -235,8 +235,7 @@
                             Non collaborators are allowed to attend, by invitation.
                         </p>
                         <p>
-                            Wednesday 430-530.
-                            Currently meeting virtually.
+                            <strike>Wednesday 430-530. Currently meeting virtually.</strike> (Off for the summer, returning August)
                         </p>
                     </li>
                     <li><strong>Social Hour/Lab Open House</strong>
