added Florian to list of people

--- a/index.html
+++ b/index.html
@@ -163,6 +163,14 @@
                             <br>
                         </div>
                         <div class="col-sm text-center">
+                            <img src="imgs/people/012_florian.jpg" width="200" alt="Florian Farke" class="img-thumbnail">
+                            <br>
+                            Florian Farke
+                            <br>
+                            External Collaborator
+                            <br>
+                        </div>
+                        <div class="col-sm text-center">
                             <img src="imgs/people/009_peter.jpg" width="200" alt="Peter Mayer" class="img-thumbnail">
                             <br>
                             Peter Mayer
@@ -179,6 +187,8 @@
                             Undergraduate (USNA)
                             <br>
                         </div>
+                    </div>
+                    <div class="row mt-2 mb-4">
                         <div class="col-sm text-center">
                             <img src="imgs/people/011_owen.jpg" width="200" alt="Xiaoyuan (Owen) Wu" class="img-thumbnail">
                             <br>
