--- a/index.html
+++ b/index.html
@@ -282,7 +282,10 @@
                 <h2>Publications </h2>
                 <ul class="list-group">
                     <li class="list-group-item" aria-disabled="true">
-                        Philipp Markert, Daniel V. Bailey, Maximillian Golla, Markus D&uuml;rmuth, and Adam J. Aviv. <a href="https://doi.ieeecomputersociety.org/10.1109/SP40000.2020.00100">This PIN Can Be Easily Guessed: Analyzing the Security of Smartphone Unlock PINs</a>. 2020 IEEE Symposium on Security and Privacy (SP). Pgs. 1525-1542. IEEE Computer Society. 2020
+                      Raina Samuel, Philipp Markert, Adam J. Aviv, and Iulian Neamtiu. Knock, Knock. Who's There? On the Security of LG's Knock Codes. 2020 Symposium on Usable Security and Privacy (SOUPS'20). Pgs. 1-24. USENIX. 2020. (<a href="https://arxiv.org/abs/2006.03556">arxiv preprit</a>)
+                    </li>
+                    <li class="list-group-item" aria-disabled="true">
+                        Philipp Markert, Daniel V. Bailey, Maximillian Golla, Markus D&uuml;rmuth, and Adam J. Aviv. <a href="https://doi.ieeecomputersociety.org/10.1109/SP40000.2020.00100">This PIN Can Be Easily Guessed: Analyzing the Security of Smartphone Unlock PINs</a>. 2020 IEEE Symposium on Security and Privacy (SP'20). Pgs. 1525-1542. IEEE Computer Society. 2020
                     </li>
                     <li class="list-group-item" aria-disabled="true">
                         Timothy J. Forman, Daniel S. Roche, and Adam J. Aviv. <a href="https://dl.acm.org/doi/abs/10.1145/3334480.3382922">Twice as Nice? A Preliminary Evaluation of Double Android Unlock Patterns</a>. Extended Abstracts of the 2020 CHI Conference on Human Factors in Computing Systems. (CHI EA ’20). Pgs. 1–7. Association for Computing Machinery. 2020
