fixing typos and times, noting Yas as a new Asst. in 2021

--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                             <br>
                             <a href="https://yaseminacar.de/">Yasemin Acar</a>
                             <br>
-                            External Collaborator
+                            External Collaborator<br>
+                            Assistant Professor (starting Jan, 2021)
                             <br>
                         </div>
                         <div class="col-sm text-center">
@@ -228,14 +229,14 @@
                             <strike>Thursdays 1130-1230. Currently meeting virtually.</strike> (Off for the summer, returning August)
                         </p>
                     </li>
-                    <li><strong>Lab Meetings</strong>
+                    <li><strong>Lab Scrum Meetings</strong>
                         <div class="badge badge-danger">by invitation</div>
                         <p>
                             We have regular, scrum-like lab meetings where status updates on all projects are quickly presented.
                             Non collaborators are allowed to attend, by invitation.
                         </p>
                         <p>
-                            <strike>Wednesday 430-530. Currently meeting virtually.</strike> (Off for the summer, returning August)
+                            Friday 430-500. Currently meeting virtually.
                         </p>
                     </li>
                     <li><strong>Social Hour/Lab Open House</strong>
@@ -261,8 +262,8 @@
                         <p>
                             We are always looking for new PhD students, and if you are applying to grad school and interested in usable security and privacy, please consider GW!
                             Please email Adam Aviv with any inquiries, but be mindful, we may not follow up with everyone.
-                            Form, mass emails will not receive a response, so please be sure to not some background about yourself and which kinds of projects your interested in.
-                            Do not attach a CV or resume: just let us know who you are and why you want to join the lab.
+                            Obvious form emails sent enmass will not receive a response, so please be sure to write a personal email that notes some background about yourself and what kinds of projects you're interested in researching.
+                            <em>Do not attach a CV or resume</em>: just let us know who you are and why you want to join the lab.
                         </p>
                     </li>
                     <li><strong> GW Undergraduate/Masters Students </strong>
