new news and title updates

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                 <div class="container news">
                     <h4>News</h4>
                     <ul>
+                      <li><span class="badge badge-secondary">June 2020</span> Raina Samuel, Philipp Markert, Adam J. Aviv, and Iulian Neamtiu have a new paper accepted at SOUPS'20 on the security and usability of Knock Codes. Read the <a href="https://arxiv.org/abs/2006.03556">arxiv (preprint)</a>.</li>
+
+                      <li><span class="badge badge-secondary">June 2020</span> Yasmine Acar will be joining the CS department as an Assistant Professor and Co-lab director of GWUSEC lab starting January 2021. Welcome aboard!</li>
+                      
                         <li><span class="badge badge-secondary">May 2020</span> Philipp Markert is presenting our research at IEEE S&P (Oakland) on May 18th.</li>
                         <li><span class="badge badge-secondary">May 2020</span> We've got a Twitter account <a href="https://twitter.com/gwusec">@gwusec</a>. Follow us for updates!</li>
                         <li><span class="badge badge-secondary">May 2020</span> David Balash, Nelson Jaimes, and Collins Munyendo. Welcome aboard!</li>
@@ -88,7 +92,7 @@
                             <br>
                             <a href="https://adamaviv.com">Adam J. Aviv</a>
                             <br>
-                            Associate Professor
+                            Assoc. Prof.
                             <br>
                             <em>Lab Director</em>
                         </div>
@@ -98,7 +102,8 @@
                             <a href="https://yaseminacar.de/">Yasemin Acar</a>
                             <br>
                             External Collaborator<br>
-                            Assistant Professor (starting Jan, 2021)
+                            <em>Assist. Prof./Co-Lab Director<br>
+                            (starting Jan, 2021)</em>
                             <br>
                         </div>
                         <div class="col-sm text-center">
