--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                             Undergraduate (USNA)
                             <br>
                         </div>
+                        
                     </div>
                     <div class="row mt-2 mb-4">
                         <div class="col-sm text-center">
@@ -202,6 +203,12 @@
                             <br>
                             Undergraduate
                             <br>
+                        </div>
+                        <div class="col-sm text-center">
+                        </div>
+                        <div class="col-sm text-center">
+                        </div>
+                        <div class="col-sm text-center">
                         </div>
                     </div>
                     <em>If you are a current lab member or collaborator and would like to be added to the list of members, submit a pull request to the webpage repository.</em>
