--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                     <a class="nav-link" href="#join">Join the lab!</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#values">Values Statement</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="#pubs">Publications</a>
                 </li>
             </ul>
@@ -94,7 +98,7 @@
                             <br>
                             Assoc. Prof.
                             <br>
-                            <em>Lab Director</em>
+                            <em>Co-Lab Director</em>
                         </div>
                         <div class="col-sm text-center">
                             <img src="imgs/people/002_yasemin.jpg" width="200" alt="Yasmine Acar" class="img-thumbnail">
@@ -216,13 +220,13 @@
                         <h3>External Lab Collaborations</h3>
                         <ul>
                             <li><a href="https://push.umbc.edu">PUSH Group: Privacy & Usable Security Human-centered Computing</a> at University of Maryland, Baltimore County (UMD)</li>
-                            <li><ul>
+                            <ul>
                                 <li>Ravi Kuber</li>
                                 <li>Hirak Rey</li>
                                 <li>Flynn Wolf</li>
                             </ul></li>
                             <li>Security, Privacy, People lab (SP2) at University of Maryland, College Park (UMD)</li>
-                            <li><ul>
+                            <ul>
                                 <li>Michelle Mazurek</li>
                                 <li>Noel Wartford</li>
                             </ul></li>
@@ -299,6 +303,24 @@
                         </p>
                     </li>
                 </ul>
+            </div>
+            <div class="container values content">
+              <a id="values"></a>
+              <h2>Value Statement</h2>
+              <p> At GWUSEC, we strive to conduct the highest quality academic research that is inclusive, diverse, and impactful. In those pursuits, we are guided by the following principles:
+              <ul>
+                
+              <li> <b>scientific rigor</b> — we seek academic and scientific rigor in our research efforts to explore subject matters in-depth;</li>
+              <li> <b>creativity</b> — we reward creativity in our research, and do not confine or belittle others’ ideas; </li>
+              <li> <b>integrity</b> — we value honesty and accuracy in our communications and reports;</li>
+              <li> <b>ethics</b> — we conduct our research to the highest ethical standard with consideration to subjects, researchers, and the community at large;</li>
+              <li> <b>inclusion</b> — we include diverse ideas, mindsets, and objectives in our research, and we desire inclusivity in our research team across backgrounds, including, age, gender, race, ethnicity, religion, (dis)ability, economic background, and nationality;</li>
+              <li> <b>humility</b> — we are willing to admit when we are wrong and take action to correct mistakes in ourselves and offer support to others;</li>
+              <li> <b>compassion</b> — we show compassion to each other and to others, and support team members in cases when their physical or mental health, personal life or family warrants special consideration;</li>
+              <li> <b>justice</b> — we believe in justice and oppose discrimination based on age, gender, race, ethnicity, religion, (dis)ability, economic background and nationality, and condemn oppression in any form.</li>
+              <li> <b>impact</b> — we are determined to conduct research that is impactful both within the scientific community and broadly for all humanity.</li>
+              </ul>
+              </p>
             </div>
             <div class="container publications content">
                 <a id="pubs"></a>
